gcc/testsuite/rust/rustc/ui/range/range_traits-3.rs
use std::ops::*;

#[derive(Copy, Clone)] // { dg-error ".E0204." "" { target *-*-* } }
struct R(RangeFrom<usize>);

fn main() {}

